--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,13 +1,19 @@
 name: Terraform CI
 
+#Permissions:
+
+permissions:
+    id-token: write
+    contents: read
 on:
   pull_request:
   push:
     branches:
       - main
 
+# ---------- DEV ----------
 jobs:
-  terraform:
+  terraform-dev:
     name: Terraform checks (dev & prod)
     runs-on: ubuntu-latest
 
@@ -20,7 +26,12 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      # ---------- DEV ----------
+      - name: Configure AWS credentials (dev)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            role-to-assume: arn:aws:iam::724134393251:role/github-actions-terraform-dev
+            aws-region: us-east-1
+
       - name: Terraform fmt (dev)
         working-directory: environments/dev
         run: terraform fmt -check -recursive
@@ -38,6 +49,27 @@ jobs:
         run: terraform plan -input=false
 
       # ---------- PROD ----------
+  terraform-prod:
+    name: Terraform checks (prod)
+    runs-on: ubuntu-latest
+    needs: terraform-dev
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+
+      - name: Configure AWS credentials (prod)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            role-to-assume: arn:aws:iam::724134393251:role/github-actions-terraform-prod
+            aws-region: us-east-1
+            
       - name: Terraform fmt (prod)
         working-directory: environments/prod
         run: terraform fmt -check -recursive
